# tdesktop-emoji-sprite-generator

./: .gitignore  README.md  data.txt  index.html
.github/workflows/: build.yml
assets/: README.md
cpp/: CMakeLists.txt  main.cpp  telegram-desktop-notoemoji.pro
cpp/codegen/common/: logging.cpp  logging.h
web/: index.html  index.js
